--- a/paper/wnut2021.tex
+++ b/paper/wnut2021.tex
@@ -102,6 +102,22 @@
 
 \subsection{Contributions}
 
+The main contributions of this paper are
+\begin{enumerate}
+    \item \textbf{Timestamp extraction.}
+        There are many standards on how to locate date information on a web page.
+        Moreover, these standards have not been strictly followed.
+        Thus, a specific XPath pointing to timestamp information is required on many web pages.
+    \item \textbf{Content extraction.}
+        We implemented a graphical annotation tool which makes human annotation more efficiently.
+        Following the guidelines of annotation, we have annotated X,XXX web pages and the evaluation of inner agreement shows XX.X\% at XXth percentile.
+    \item \textbf{Dataset.}
+        Our dataset consists of X,XXX web pages.
+        Each web page is identified as either an article or non article.
+        Those identified as an article have accurate timestamp.
+        The most frequent languages in dataset are English, German, French, etc.
+\end{enumerate}
+
 \fixme{
 add the contributions;
 this should be the first thing to focus on, since exactly what our contributions are will determine how the rest of the paper gets written;
@@ -125,6 +141,12 @@ At this point, these summaries should just be in outline format.
 Later, we will go through and put this together into a nice narrative.}
 
 Notice the correct way to use the cite and citet commands in the following examples:
+
+To create a high quality corpus, after documents were pre-processed by boilerplate removal, Scafer et. al (2013) annotates the documents with emphasis on quality of sentences. Based on the guidelines, Schafer et. al (2013) evaluates the "Badness" of the documents and any document with the "Badness" higher than the threshold will be removed from the corpus. They also consider boilerplate in the sentence form is good. For example, you are not allowed to post comments in the forum. And, copyright is bad.
+
+Weninger et. al (2018) points out that the development in content extraction should be taken on fully rendered web pages
+
+Carletta 1996; DiEugenio and Glass 2004 suggest that annotators should agree at least 80 percent of all cases. (Bayerl 2011)
 
 NLP is awesome \cite{Aho:72}.
 
